--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BingWallPaper</string>
+    <string name="app_name">Bing壁纸</string>
     <string name="backup">返回</string>
     <string name="setting">设置</string>
     <string name="delete">删除</string>
